--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 # Site title and subtitle. This is used in _includes/header.html
-title: 'My test site'
+title: 'My test site - f'
 subtitle: 'what a pain'
 
 # if you wish to integrate disqus on pages set your shortname here
